[gd_scene load_steps=8 format=3 uid="uid://phki5l5sq0wi"]

[ext_resource type="Script" path="res://Scripts/ui/inn.gd" id="1_ukxor"]
[ext_resource type="Texture2D" uid="uid://d10qlw38f3frt" path="res://Assets/ai/tavern.jpg" id="2_5kr2t"]
[ext_resource type="Texture2D" uid="uid://14uphk6bd4nw" path="res://Assets/ui/brown_leather.jpg" id="3_qcyru"]
[ext_resource type="PackedScene" uid="uid://8t53t4rmile7" path="res://Scenes/ui/button_press_audio_player.tscn" id="3_t1ran"]
[ext_resource type="Script" path="res://Scripts/ui/shop/gold_label.gd" id="4_1id2x"]
[ext_resource type="PackedScene" uid="uid://duwpoqfg10etc" path="res://Scenes/ui/soundplayers/money_player.tscn" id="6_udcpc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hjfsl"]
texture = ExtResource("3_qcyru")
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Inn" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ukxor")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BuildingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Inn"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_5kr2t")
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Leather" type="Panel" parent="MarginContainer/VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hjfsl")

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/PanelContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.298039)

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Gold:"

[node name="Gold" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "17000"
script = ExtResource("4_1id2x")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cost: "

[node name="Cost" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "5"

[node name="RestButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Rest"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Cost: "

[node name="Cost" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1000"

[node name="RecruitButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Recruit"

[node name="ButtonPressAudioPlayer" parent="." instance=ExtResource("3_t1ran")]
unique_name_in_owner = true

[node name="MoneyPlayer" parent="." instance=ExtResource("6_udcpc")]
unique_name_in_owner = true
